[package]
name = "jindex-rs"
version = "0.0.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0.0"
rustc-hash = "1.1.0"
anyhow = "1.0.44"
jni = "0.19.0"
cafebabe = "0.5.0"
speedy = "0.8.0"
zip = { version = "0.5.13", features = ["deflate"], default-features = false}
num_cpus = "1.13.1"
atomic_refcell = "0.1.8"

[lib]
crate_type = ["cdylib"]

[profile.release]
debug = true
