[package]
name = "jindex-rs"
version = "0.0.39"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0.0"
rustc-hash = "1.1.0"
anyhow = "1.0.57"
jni = "0.20.0"
cafebabe = { git = "https://github.com/tth05/cafebabe", branch = "main" }
speedy = "0.8.0"
zip = { version = "0.6.2", features = ["deflate"], default-features = false}
num_cpus = "1.13.1"
once_cell = "1.16.0"
atomic_refcell = "0.1.8"
mimalloc = { version = "*", default-features = false }
rayon = "1.6.0"

[lib]
crate_type = ["cdylib"]

[profile.release]
debug = true